src/objects/Portal_Applications__c.object
<CustomObject>
    <description>Will contain the list of applications accessible trough the portal</description>
    <fields>
        <fullName>ANG_Accre_Tp__c</fullName>
        <description>Flag used to filter the Portal Services SOQL Query configured on the custom setting: ISSP Service List View</description>
        <formula>OR(
OR($User.ANG_Sector__c = &quot;Airline&quot;, $User.ANG_Sector__c = &quot;Cargo Agent&quot;),
IF(INCLUDES(ANG_Restrict_by_Accreditation_Type__c, &apos;Cash&apos;) &amp;&amp; $User.ANG_Accreditation_Model__c = &apos;Cash&apos;, true,
IF(INCLUDES(ANG_Restrict_by_Accreditation_Type__c, &apos;Cashless&apos;) &amp;&amp; $User.ANG_Accreditation_Model__c = &apos;Cashless&apos;, true, false)),
ISBLANK(ANG_Restrict_by_Accreditation_Type__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Restrict by Accreditation Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Accredited_Agents_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service can only be subscribed by accredited agents.</description>
        <inlineHelpText>Restrict portal visibility to accredited Agents with Agency Status=Approved OR Changes processed OR Listed.</inlineHelpText>
        <label>Accredited Agents Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Cannot_move_contact_between_Agencies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled then contacts with Access Granted or Requested to this portal service cannot be moved from one Agency hierarchy to another.</description>
        <inlineHelpText>If enabled then contacts with Access Granted or Requested to this portal service cannot be moved from one Agency hierarchy to another.</inlineHelpText>
        <label>Cannot move contact between Agencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Country_Coverage__c</fullName>
        <description>Contains a comma-separated list of Country ISO Codes that are linked to a portal service (this list is managed by the a trigger on IATA ISO country (AMS_IATAISOCountryTrigger).</description>
        <label>Country Coverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANG_Flag_Country_Coverage__c</fullName>
        <description>Flag used to filter the Portal Services SOQL Query configured on the custom setting: ISSP Service List View</description>
        <formula>IF(ISPICKVAL(Country_Visibility_Control__c, &quot;SHOW_ALL&quot;), TRUE,
OR (
AND(
IF(
     ISPICKVAL(Country_Visibility_Control__c, &quot;HIDE&quot;),
        NOT(CONTAINS(ANG_Country_Coverage__c, $User.ANG_Customer_Country_ISO__c)),
     CONTAINS(ANG_Country_Coverage__c, $User.ANG_Customer_Country_ISO__c)
     ),
TRIM(ANG_Country_Coverage__c) != &quot;&quot;
),
TRIM(ANG_Country_Coverage__c) = &quot;&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Country Coverage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Flag_Restrict_Accredited_Agent__c</fullName>
        <description>Flag used to filter the Portal Services SOQL Query configured on the custom setting: ISSP Service List View</description>
        <formula>OR(
  (
    AND (
      CONTAINS($User.Customer_type__c,&quot;Agency&quot;),
      $User.ANG_Is_Accredited_Agent__c,
      ANG_Accredited_Agents_Only__c
    )
  ),
  (
    AND (
      CONTAINS($User.Customer_type__c,&quot;Agency&quot;),
      ANG_Accredited_Agents_Only__c = false
    )
  ),
  (
    NOT(CONTAINS($User.Customer_type__c,&quot;Agency&quot;))  
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Restrict Accredited Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Flag_Restrict_Sector__c</fullName>
        <description>Flag used to filter the Portal Services SOQL Query configured on the custom setting: ISSP Service List View</description>
        <formula>OR(
  (
    AND($User.ANG_Sector__c != &quot;Travel Agent&quot;, $User.ANG_Sector__c != &quot;Cargo Agent&quot;)
  ),
  (
    AND (OR($User.ANG_Sector__c = &quot;Travel Agent&quot;, $User.ANG_Sector__c = &quot;Cargo Agent&quot;),
           $User.ANG_Sector__c = TEXT(ANG_Restrict_by_Agency_Sector__c))  
  ),
  (
    TEXT(ANG_Restrict_by_Agency_Sector__c) = &quot;&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Restrict Sector</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Flag_Restrict_by_Agency_Category__c</fullName>
        <formula>OR(
ISBLANK(ANG_Restrict_by_Agency_Category__c),
AND(NOT(ISBLANK(ANG_Restrict_by_Agency_Category__c)),
   IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;Airline Point of Sale&apos;) &amp;&amp; $User.ANG_Category__c = &apos;Airline Point of Sale&apos;, true,
    IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;Domestic Agent&apos;) &amp;&amp; $User.ANG_Category__c = &apos;Domestic Agent&apos;, true,
     IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;GSA General Sales Agent&apos;) &amp;&amp; $User.ANG_Category__c = &apos;GSA General Sales Agent&apos;, true,
      IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;Airport Handling Agent&apos;) &amp;&amp; $User.ANG_Category__c = &apos;Airport Handling Agent&apos;, true,
       IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;IATA Passenger Sales Agent&apos;) &amp;&amp; $User.ANG_Category__c = &apos;IATA Passenger Sales Agent&apos;, true,
        IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;MSO Member Sales Office&apos;) &amp;&amp; $User.ANG_Category__c = &apos;MSO Member Sales Office&apos;, true,
         IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;TIDS Agent&apos;) &amp;&amp; $User.ANG_Category__c = &apos;TIDS Agent&apos;, true,
         IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;IATA Cargo Agent&apos;) &amp;&amp; $User.ANG_Category__c = &apos;IATA Cargo Agent&apos;, true,
          IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;CASS Associate&apos;) &amp;&amp; $User.ANG_Category__c = &apos;CASS Associate&apos;, true,
           IF(INCLUDES(ANG_Restrict_by_Agency_Category__c, &apos;Import Agent&apos;) &amp;&amp; $User.ANG_Category__c = &apos;Import Agent&apos;, true, false)
          )
         )
        )
       )
      )
     )
    )
   )
  )
 ),
NOT(CONTAINS($User.Customer_type__c,&quot;Agency&quot;))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Restrict by Agency Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Lock_access_to_accreditation_type__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Only allow internal users to grant access to this portal service if the agency&apos;s accreditation type matches the &apos;Restrict by Accreditation Type&apos; of the portal service</inlineHelpText>
        <label>Lock access to Accreditation Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANG_Restrict_by_Accreditation_Type__c</fullName>
        <description>Value used to restrict the visibility of the RHC Portal Service</description>
        <inlineHelpText>Restrict visibility by Accreditation Type (PAX Agents only). Service will be visible to all PAX Agents, including Legacy Agents, if left empty.</inlineHelpText>
        <label>Restrict by Accreditation Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Cashless</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Restrict_by_Agency_Category__c</fullName>
        <description>Restrict portal visibility by Agency Category.</description>
        <inlineHelpText>Restrict portal visibility by Agency Category. Will be visible for all categories of Agents if left empty.</inlineHelpText>
        <label>Restrict by Agency Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Airline Point of Sale</fullName>
                </value>
                <value>
                    <fullName>Domestic Agent</fullName>
                </value>
                <value>
                    <fullName>GSA General Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Airport Handling Agent</fullName>
                </value>
                <value>
                    <fullName>IATA Passenger Sales Agent</fullName>
                </value>
                <value>
                    <fullName>MSO Member Sales Office</fullName>
                </value>
                <value>
                    <fullName>TIDS Agent</fullName>
                </value>
                <value>
                    <fullName>IATA Cargo Agent</fullName>
                </value>
                <value>
                    <fullName>CASS Associate</fullName>
                </value>
                <value>
                    <fullName>Import Agent</fullName>
                </value>
                <value>
                    <fullName>IATAN Passenger Sales Agent (USA Only)</fullName>
                </value>
                <value>
                    <fullName>Travel Service Intermediaries-TSI (USA Only)</fullName>
                </value>
                <value>
                    <fullName>Handling Agent</fullName>
                    <isActive>false</isActive>
                    <label>Handling Agent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Restrict_by_Agency_Sector__c</fullName>
        <description>Permitted agency sector</description>
        <inlineHelpText>Restrict portal visibility to either Travel or Cargo Agents. Will be visible to Agents in both sectors if left empty.</inlineHelpText>
        <label>Restrict by Agency Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Travel Agent</fullName>
                </value>
                <value>
                    <fullName>Cargo Agent</fullName>
                </value>
                <value>
                    <fullName>Postal Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ANG_Restrict_internal_selection__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked prevents portal services from being subscribed from Salesforce.</description>
        <inlineHelpText>Enabling this option prevents internal users from granting this portal service to contacts.</inlineHelpText>
        <label>Cannot be granted internally</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this is the application for the Agent type of customer.</inlineHelpText>
        <label>Agency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aplication_Start_Icon__c</fullName>
        <formula>HYPERLINK( Application_URL__c ,  IMAGE( &quot;https://confluence.sakaiproject.org/download/attachments/32735262/start-button.png?api=v2&quot; ,  Name,32,32), &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aplication Start Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_URL__c</fullName>
        <label>Application URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Application_icon_URL__c</fullName>
        <defaultValue>&quot;http://greencyprus.net/wp-content/uploads/image/question%20mark.jpg&quot;</defaultValue>
        <description>URL to the Application icon</description>
        <label>Application icon URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Application_icon__c</fullName>
        <formula>IMAGE( Application_icon_URL__c ,  Name, 64, 64 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Application icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_approved_for__c</fullName>
        <description>This fields controls if the service can be auto approved by a portal user</description>
        <inlineHelpText>All profiles selected here will be able to get this service without any approval from the administrator.</inlineHelpText>
        <label>Auto approved for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISS Portal (Partner)</fullName>
                </value>
                <value>
                    <fullName>ISS Portal Agency User (Partner)</fullName>
                </value>
                <value>
                    <fullName>ISS Portal Airline User (Partner)</fullName>
                </value>
                <value>
                    <fullName>ISS Portal GSA User (Partner)</fullName>
                </value>
                <value>
                    <fullName>ISS Portal PwC2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_grant_Account_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the Account Role is automatically granted when the first user is granted access to this service and also removed when the last user is denied access to the service.</description>
        <label>Auto grant Account Role?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cannot_be_managed_by_portal_admin__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true do not allow portal admin to manage service</description>
        <inlineHelpText>If ticked the portal admin user will not have visible options to manage this service.</inlineHelpText>
        <label>Cannot be managed by portal admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_creation_record_type__c</fullName>
        <label>Case creation record type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirm_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Confirm_Text__c</fullName>
        <label>Confirm Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact_Role_Detail_Name__c</fullName>
        <label>Contact Role Detail Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Functional_Role__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Contact_Role_Details</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Visibility_Control__c</fullName>
        <inlineHelpText>Listed Countries Only: Only available to &apos;Country Visibility Restriction&apos; listed countries

    Hide from Listed Countries: Available to all countries EXCEPT the listed countries

    All Countries: Available to all countries; ignores related list</inlineHelpText>
        <label>Country Visibility Control</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SHOW</fullName>
                    <label>Listed Countries Only</label>
                </value>
                <value>
                    <fullName>HIDE</fullName>
                    <label>Hide from Listed Countries</label>
                </value>
                <value>
                    <fullName>SHOW_ALL</fullName>
                    <label>Display to All Countries</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Critical_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Critical Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Functional_Role__c</fullName>
        <label>Functional Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Functional_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>GDPR_PrivacyStatement__c</fullName>
        <description>URL to privacy statement (document or web page) for each service</description>
        <label>GDPR_PrivacyStatement</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GSA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this is the application for the GSA type of customer.</inlineHelpText>
        <label>GSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GSSA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Make portal service available to all GSSA customers (Partner users belonging to Account of record type &apos;General Sales Agent Headquarters / Branch WITH 3-letter IATA code)</inlineHelpText>
        <label>GSSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hide_on_Homepage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If check the application will not be visible on the user homepage</inlineHelpText>
        <label>Hide on Homepage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICH_Airline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this is the application for the ICH Airline type of customer.</inlineHelpText>
        <label>ICH Airline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Async_Automated_User_Provisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked (true), this service requires Automated User provisioning steps to be completed before access is granted to Users.</description>
        <label>Is Async Automated User Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Async_Manual_User_Provisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked (true), this service requires manual User provisioning steps to be completed before access is granted to Users.</description>
        <label>Is Async Manual User Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewGenAPP_ShortName__c</fullName>
        <description>When this filed is filled, it will show the service in NewGenAPP mobile.</description>
        <inlineHelpText>When this filed is filled, it will show the service in NewGenAPP mobile.</inlineHelpText>
        <label>NewGenAPP-ShortName</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>New_Window__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Window</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_ICH_Airline__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this is the application for the Airline non-ICH type of customer.</inlineHelpText>
        <label>Not ICH Airline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick if this is the application for Others account record type.</inlineHelpText>
        <label>Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisioning_Type__c</fullName>
        <label>Provisioning Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WebService</fullName>
                </value>
                <value>
                    <fullName>SCIM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_type_for_App_Rigth__c</fullName>
        <defaultValue>&quot;012w0000000QC2Z&quot;</defaultValue>
        <inlineHelpText>The id of the Record type to open when creating a new service access request</inlineHelpText>
        <label>Record type for App Rigth</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if  application That can be requested</description>
        <label>Requestable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Level2_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if L2 registration is necessary to request access to this service</description>
        <label>Requires Level2 Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requires_Service_Admin_Approval__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if User&apos;s requesting to use this portal service require an approval from a service administrator or not.</description>
        <label>Requires Service Admin Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restricted_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SCIM_App_Name__c</fullName>
        <description>Name of Salesforce Connected SCIM App Name</description>
        <label>SCIM App Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceName__c</fullName>
        <description>Formula field used to render the translation of the Service Name on the Portal</description>
        <formula>CASE(Name, 

&quot;Join BSP / CASS&quot;, $Label.ISSP_Join_BSP_CASS,
&quot;SIS&quot;, $Label.SIS,
&quot;SIS Help Desk&quot;, $Label.SIS_Help_Desk,
&quot;Management Information Report&quot;, $Label.ISSP_MIR,
&quot;IATA Accreditation &amp; Changes&quot;, $Label.ISSP_Become_Accredited_Agent,
&quot;CNS Endorsement &amp; Changes&quot;, $Label.ISSP_Become_Endorsed_Agent_CNS,
&quot;BSP / CASS Change Request&quot;, $Label.ISSP_Change_Request,
&quot;BSP / CASS Change of Bank details&quot;, $Label.ISSP_AP_Bank_Details_Change,
&quot;BSPLink&quot;, $Label.ISSP_BSPLink,
&quot;CassLink&quot;, $Label.ISSP_CassLink,
&quot;CNS CassLink&quot;, $Label.ISSP_CASSLink_Export_CNS,
&quot;E-Bulletin&quot;, $Label.ISSP_EBulletin, 
&quot;IFAP&quot;, $Label.ISSP_IFAP,
&quot;Resource Center&quot;, $Label.ISSP_Resource_Center,
&quot;Simplified Interline Settlement&quot;, $Label.ISSP_Simplified_Interline_Settlement,
&quot;Treasury Dashboard&quot;, $Label.ISSP_TD,
&quot;Treasury Dashboard - Premium&quot;, $Label.ISSP_TD_Premium,
&quot;Baggage Proration&quot;, $Label.ISSP_BaggageProration,
&quot;TestApp&quot;, $Label.ISSP_TestApp,
&quot;IATA Certificate&quot;, $Label.ISSP_IATAcertificate,
&quot;CASSLink Plus&quot;, $Label.ISSP_Casslink_Plus,
&quot;CASSLink Export&quot;, $Label.ISSP_CASSLink_Export,
&quot;CASSLink Import&quot;, $Label.ISSP_CASSLink_Import,
&quot;CASSLink Analytics&quot;, $Label.ISSP_CASSLink_Analytics,
&quot;ICE – IATA Customer E-Statement&quot;, $Label.ISSP_Account_Statements,
&quot;MITA Agreements&quot;, $Label.ISSP_MITA_Agreements_Service_Name,
&quot;CNS Endorsement &amp; Changes&quot;, $Label.ISSP_CNS_Endorsement,
&quot;IFACP Endorsement &amp; Changes&quot;, $Label.ISSP_IFACP_Endorsement_Changes,
&quot;CNS Payment Link&quot;, $Label.ISSP_CNS_PaymentLink_ServiceName,
&quot;IATA EasyPay (WEX)&quot;, $Label.ANG_ISSP_IATA_EasyPay, 
&quot;IATA EasyPay (EDENRED)&quot;, $Label.ANG_ISSP_IATA_EasyPay, 
&quot;IATA EasyPay (MSTS)&quot;, $Label.ANG_ISSP_IATA_EasyPay, 
&quot;Currency Center&quot;, $Label.ISSP_CurrencyCenter,
&quot;Risk Profile and RHC&quot;, IF($User.ANG_Customer_Country_ISO__c = &quot;CN&quot;, $Label.ANG_ISSP_RHC_Information_China, $Label.ANG_ISSP_RHC_Information),
&quot;ICCS&quot;,&quot;ICCS&quot;,
&quot;IATAN Online Services&quot;, $Label.ISSP_IdCard_US,
&quot;ID Card Online Platform&quot;, $Label.ISSP_IdCard_NonUS,
&quot;Airline Daily Sales&quot;, $Label.CSP_Service_AirlineDailySales_Title,
&quot;SMART Lite&quot;, $Label.CSP_Service_SmartLite_Title,
Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Description_Label__c</fullName>
        <description>Optional field to contain the API name of a Custom Label containing a description of the service. If present, the text in the corresponding label will be shown on the Portal instead of the Service Description formula.</description>
        <inlineHelpText>Input a Custom Label API name. Optional. If present, overrides the Service Description formula field</inlineHelpText>
        <label>Service Description Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Description_List_A__c</fullName>
        <description>Contains first portion of Portal Services Description Labels</description>
        <formula>CASE(Name , 
&quot;BSPLink&quot;, $Label.BSPLink_Description, 
&quot;CassLink&quot;, $Label.CASSLink_Description, 
&quot;E-Bulletin&quot;, $Label.ISSP_EBulletin_Description, 
&quot;IFAP&quot;, $Label.IFAP_Description, 
&quot;Join BSP / CASS&quot;, $Label.ISSP_Join_BSP_CASS_Description, 
&quot;BSP / CASS Change Request&quot;, $Label.ISSP_Change_Request_Description, 
&quot;BSP / CASS Change of Bank details&quot;, $Label.ISSP_AP_Bank_Details_Change_Description, 
&quot;Management Information Report&quot;, $Label.ISSP_MIR_Description, 
&quot;Resource Center&quot;, $Label.ISSP_Resource_Center_Description, 
&quot;Treasury Dashboard&quot;, $Label.ISSP_TD_Description, 
&quot;Treasury Dashboard - Premium&quot;, $Label.ISSP_TD_Description,
&quot;Simplified Interline Settlement&quot;, $Label.ISSP_SIS_1_Description, 
&quot;SIS&quot;, $Label.ISSP_SIS_3_Description, 
&quot;Payment Link&quot;, $Label.ISSP_Payment_Link_Description, 
&quot;Credit Card Link&quot;, $Label.ISSP_Payment_Link_Description_CNS, 
&quot;Standards Setting Workspace&quot;, $Label.Standards_Setting_Workspace, 
&quot;IATA EasyPay (WEX)&quot;, $Label.ANG_ISSP_IATA_EasyPay, 
&quot;IATA EasyPay (EDENRED)&quot;, $Label.ANG_ISSP_IATA_EasyPay, 
&quot;IATA EasyPay (MSTS)&quot;, $Label.ANG_ISSP_IATA_EasyPay, 
&quot;Currency Center&quot;, $Label.ISSP_CurrencyCenter_Description,
&quot;Risk Profile and RHC&quot;, IF($User.ANG_Customer_Country_ISO__c = &quot;CN&quot;, $Label.ANG_ISSP_RHC_Information_China, $Label.ANG_ISSP_RHC_Information),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Description List A</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Description_List_B__c</fullName>
        <description>Second Portion of Service Description Labels</description>
        <formula>CASE(Name , 
&quot;Risk Profile and RHC&quot;,$Label.ISSP_ANG_RHC_InformationDescription,
&quot;MSO Management&quot;,$Label.ISSP_AMS_MSO_GSA_MSO_Service_Description,
&quot;Join SIS e-Invoicing&quot;,$Label.ISSP_SIS_Membership_Description,
&quot;ICCS&quot;,$Label.ICCS_Service_Description,
&quot;SIS Help Desk&quot;, $Label.ISSP_SIS_2_Description,
&quot;ICE – IATA Customer E-Statement&quot;, $Label.ISSP_ICE_Description,
&quot;ID Card Online Platform&quot;,$Label.IDCard_NoUSServiceDescription ,
&quot;IATAN WebStar Online Services&quot;,$Label.IDCard_USServiceDescription,
&quot;IATA Code Search&quot;,$Label.ISSP_ANG_IATA_CODE_SEARCH_DESCRIPTION,
&quot;IATA Postal Accounts Settlement System&quot;,$Label.ISSP_PASS_PS_Description,
&quot;PASSlink Single Sign-On&quot;,$Label.ISSP_PASSLink_PS_Description,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Description List B</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Description__c</fullName>
        <formula>IF( NOT(ISNULL(Service_Description_List_A__c))  , Service_Description_List_A__c,
				IF(NOT(ISNULL(Service_Description_List_B__c)), Service_Description_List_B__c, 
							&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TD_Access_Level__c</fullName>
        <label>TD Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TD_Included_Dashboards__c</fullName>
        <label>TD Included Dashboards</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISSP_TD_1</fullName>
                </value>
                <value>
                    <fullName>ISSP_TD_2</fullName>
                </value>
                <value>
                    <fullName>ISSP_TD_3</fullName>
                </value>
                <value>
                    <fullName>ISSP_TD_4</fullName>
                </value>
                <value>
                    <fullName>ISSP_TD_5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TD_Included_Reports__c</fullName>
        <label>TD Included Reports</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Past Settlements</fullName>
                </value>
                <value>
                    <fullName>Settlement Calendars</fullName>
                </value>
                <value>
                    <fullName>Forecast Data</fullName>
                </value>
                <value>
                    <fullName>Historical Data</fullName>
                </value>
                <value>
                    <fullName>Incoming Funds</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Non TD Reports</fullName>
                </value>
                <value>
                    <fullName>ICCS Settlement</fullName>
                </value>
                <value>
                    <fullName>TIP Reports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIDS_Countries_with_Invalid_ISO_States__c</fullName>
        <description>List of Countries (by ISO Country Codes) for which the State/Province pick-list will not be displayed in the TIDS Forms even though these State/Province values are marked as &quot;Valid for Address&quot;</description>
        <inlineHelpText>Valid for Address overwrite at Country Level - Applies to all TIDS Forms</inlineHelpText>
        <label>TIDS - Countries with Invalid ISO States</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIDS_Non_Eligible_Location_Countries__c</fullName>
        <label>TIDS Non Eligible Location Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIDS_Non_Eligible_Mailing_Countries__c</fullName>
        <label>TIDS Non Eligible Mailing Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIDS_Total_Ownership_Maximum__c</fullName>
        <defaultValue>100</defaultValue>
        <description>Minimum accepted value for Total Ownership (sum of all owners)</description>
        <inlineHelpText>Minimum accepted value for Total Ownership (sum of all owners)</inlineHelpText>
        <label>TIDS Total Ownership – Maximum</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIDS_Total_Ownership_Minimum__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Minimum accepted value for Total Ownership (sum of all owners)</description>
        <inlineHelpText>Minimum accepted value for Total Ownership (sum of all owners)</inlineHelpText>
        <label>TIDS Total Ownership – Minimum</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisibleCNS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the service should be visible on the CNS portal branding.</description>
        <inlineHelpText>Defines if the service should be visible on the CNS portal branding.</inlineHelpText>
        <label>Visible on CNS</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>